fix(dashboard): text overflow coz of whitespace: pre removed

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -86,17 +86,17 @@ body {
 }
 
 #reset-des code {
-  white-space: pre-wrap;
+  white-space: normal;
   word-break: break-all;
 }
 
 #reset-des pre {
-  white-space: pre-wrap;
+  white-space: normal;
   word-break: break-all;
 }
 
 #reset-des p {
-  white-space: pre-wrap;
+  white-space: normal;
 }
 
 #reset-des {
